<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".fragments.RestApiFragment">

    <Button
        android:id="@+id/button_fetch_anime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/button_fetch_anime" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_above="@id/button_fetch_anime"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/text_view_anime_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_anime_list_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:gravity="center_horizontal"
            android:paddingBottom="8dp"/>

        <ProgressBar
            android:id="@+id/progress_bar_anime"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/text_anime_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/api_fetch_placeholder"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_anime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            tools:listitem="@layout/list_item_anime" />

    </LinearLayout>

</RelativeLayout>